--- a/requirements.txt
+++ b/requirements.txt
@@ -111,6 +111,7 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.1
+scikit-learn==1.6.1
 uri-template==1.3.0
 urllib3==2.3.0
 watchdog==6.0.0
@@ -119,3 +120,4 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 wheel==0.45.1
+
